--- a/src/app/features/payments/view-payments-table/view-payments-table.component.html
+++ b/src/app/features/payments/view-payments-table/view-payments-table.component.html
@@ -15,7 +15,7 @@
               <div ngbDropdownMenu>
                 <button ngbDropdownItem>{{t('MARK_AS_PAID')}}</button>
                 <div class="dropdown-divider"></div>
-                <button class="btn btn-danger" ngbDropdownItem>{{t('DELETE')}}</button>
+                <button class="btn btn-danger" (click)="this.deletePayment.emit(payment)" ngbDropdownItem>{{t('DELETE')}}</button>
               </div>
             </div>
           </td>
